allows easy open of tutorial from waiting page and closes waiting page behind, fixes #163, fixes #165

--- a/static/scss/waiting.scss
+++ b/static/scss/waiting.scss
@@ -101,5 +101,11 @@
 
     .start-container {
         display: none;
+        a.start {
+            span.fi-arrow-right {
+                position: relative;
+                top: 3px;
+            }
+        }
     }
 }
